[package]
name = "vl53l1x"
version = "1.1.0"
authors = ["Ken Elkabany <ken@elkabany.com>"]
license = "MIT"
description = "Library for the VL53L1X Time-of-Flight sensor."
repository = "https://github.com/braincore/vl53l1x-rs"
keywords = ["vl53l1x"]
readme = "README.md"

[dependencies]
enum-primitive-derive = "^0.1"
num-traits = "^0.1"

[[example]]
name = "scan"
crate-type = ["bin"]
